--- a/glassfish-common/pom.xml
+++ b/glassfish-common/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>arquillian-parent-glassfish</artifactId>
         <groupId>org.jboss.arquillian.container</groupId>
-        <version>1.0.0.CR4</version>
+        <version>1.0.0.CR4-xworx</version>
         <relativePath>..</relativePath>
     </parent>
     <artifactId>arquillian-glassfish-common</artifactId>
@@ -23,12 +23,12 @@
         
         <!-- Jersey -->
         <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-bundle</artifactId>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.sun.jersey.contribs</groupId>
-            <artifactId>jersey-multipart</artifactId>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
         </dependency>
         
     </dependencies>
